--- a/index.html
+++ b/index.html
@@ -2,8 +2,37 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <!-- your other <link> and <script> tags here -->
+   
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
+  <!-- index.html -->
+<link
+  rel="stylesheet"
+  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+  integrity="…"
+  crossorigin="anonymous"
+/>
+
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+  </style>
+
+
+  <script src="https://www.google.com/recaptcha/enterprise.js?render=6Le7BHMrAAAAABN7VDzquLYljToKzbdgRJro-2-C"></script>
+  <script>
+    function onClick(e) {
+      e.preventDefault();
+      grecaptcha.enterprise.ready(async () => {
+        const token = await grecaptcha.enterprise.execute('6Le7BHMrAAAAABN7VDzquLYljToKzbdgRJro-2-C', { action: 'LOGIN' });
+      });
+    }
+  </script>
+
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  
+
 </head>
 <body>
   <div id="root"></div>
